sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:19: error: missing argument list for method print in object Predef
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `print _` or `print(_)` instead of `print`.
    print ecart
    ^